# Chromecast-remote

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake.yml
app/src/: CMakeLists.txt  ChromecastRemoteRunner.cpp  ChromecastRemoteRunner.h  main.cpp
cmake/: AddGtest.cmake
lib/: CMakeLists.txt
lib/Device/include/: Device.h  DeviceHandler.h  InputEvent.h
lib/Device/src/: CMakeLists.txt  DeviceHandler.cpp  InputEvent.cpp
lib/KeyboardDevice/include/: KeyboardDeviceHandler.h  KeyboardDeviceList.h  PosixStreamWrapper.h  RemotePresenter.h  StreamWrapper.h
lib/KeyboardDevice/src/: CMakeLists.txt  KeyboardDeviceHandler.cpp  KeyboardDeviceList.cpp  PosixStreamWrapper.cpp  RemotePresenter.cpp  StreamWrapper.cpp
lib/KeyboardDevice/test/: CMakeLists.txt  KeyboardDeviceHandlerTests.cpp  KeyboardDeviceListTests.cpp  RemotePresenterTests.cpp
lib/Publisher/include/: EventSerializer.h  Publisher.h
lib/Publisher/src/: CMakeLists.txt  EventSerializer.cpp  Publisher.cpp
lib/Publisher/test/: CMakeLists.txt  EventSerializerTests.cpp
